# TensorRT-LLM

./: .gitignore  .gitmodules  .kilocodeignore  .rooignore  .roomodes  AGENTS.md  CONVERT_PY_FIXES.md  DELAY_PATTERN_IMPLEMENTATION.md  HIGGS_AUDIO_INTEGRATION.md  MULTITOKEN_IMPLEMENTATION_SUMMARY.py  TensorRT-LLM.code-workspace  Test.py  TranscribeAudio.py  build_engine.py  build_higgs_audio_engine.py  debug_audio_generation.py  debug_audio_tokens.txt  debug_engine_weights.py  debug_generation.py  debug_log.txt  debug_model_weights.py  debug_tokenizer.py  higgs-audio  higgs_audio_transformers.py  higgs_audio_vllm.py  log.txt  log2.txt  lp_debug.txt  package-lock.json  pyproject.toml  requirements.txt  run_chat_completion.py  setup.py  tasks.json  temp.py  test.py  test2.py  test_basic_generation.py  test_comprehensive_verification.py  test_data_processing.py  (+21 more)
.github/: CODEOWNERS
.github/workflows/: blossom-ci.yml  label_issue.yml  module-owners.json
.roo/: mcp.json
benchmarks/cpp/: disaggServerBenchmark.cpp  gptManagerBenchmark.cpp
benchmarks/higgs_audio/: README.md  analysis_reporting.py  benchmark_runner.py  benchmark_suite.py  tts_benchmarks.py
cpp/: CMakeLists.txt
cpp/micro_benchmarks/: mixtureOfExpertsBackendBenchmarkFixture.h
cpp/tensorrt_llm/: CMakeLists.txt
cpp/tensorrt_llm/kernels/: CMakeLists.txt  beamSearchKernels.cu  beamSearchKernels.h  customMoeRoutingKernels.cu  customMoeRoutingKernels.h  fmhaDispatcher.cpp  logitsBitmask.cu  logitsBitmask.h  mlaChunkedPrefill.cu  mlaChunkedPrefill.cuh  mlaKernels.cu  mlaKernels.h  multiHeadAttentionCommon.h  sageAttentionKernels.cu  xqaDispatcher.cpp
cpp/tensorrt_llm/kernels/contextFusedMultiHeadAttention/: fmhaRunner.cpp
cpp/tensorrt_llm/kernels/cutlass_kernels/: CMakeLists.txt  cutlass_heuristic.cpp  dummy_empty.cpp
cpp/tensorrt_llm/kernels/cutlass_kernels/fp4_gemm/: fp4_gemm_bf16.cu  fp4_gemm_fp16.cu  fp4_gemm_fp32.cu  fp4_gemm_template.h  nvfp4_nvfp4_gemm_template_sm100.h
cpp/tensorrt_llm/kernels/cutlass_kernels/fp8_blockscale_gemm/: fp8_blockscale_tma_utils.cuh
cpp/tensorrt_llm/kernels/cutlass_kernels/fp8_blockscale_gemm/ada_blockwise_gemm/: sm89_fp8_gemm_1d1d.cuh
cpp/tensorrt_llm/kernels/cutlass_kernels/fpA_intB_gemm/: fpA_intB_gemm_template.h  fpA_intB_gemm_template_sm90.h
cpp/tensorrt_llm/kernels/cutlass_kernels/fpA_intB_gemm/launchers/: fpA_intB_launcher_sm90.h  fpA_intB_launcher_sm90.inl
cpp/tensorrt_llm/kernels/cutlass_kernels/include/: moe_gemm_kernels.h
cpp/tensorrt_llm/kernels/cutlass_kernels/moe_gemm/: moe_gemm_template_dispatch.h  moe_gemm_template_dispatch_tma_ws.h  moe_gemm_template_dispatch_tma_ws_mixed_dtype.h  moe_kernels.cu
cpp/tensorrt_llm/kernels/cutlass_kernels/moe_gemm/launchers/: fused_moe_gemm_launcher_sm80.h  fused_moe_gemm_launcher_sm80.inl  moe_gemm_tma_ws_launcher.h  moe_gemm_tma_ws_launcher.inl  moe_gemm_tma_ws_mixed_input_launcher.h  moe_gemm_tma_ws_mixed_input_launcher.inl
cpp/tensorrt_llm/kernels/cutlass_kernels/python/: generate_kernels.py
cpp/tensorrt_llm/kernels/decoderMaskedMultiheadAttention/: decoderMaskedMultiheadAttentionTemplate.h  decoderXQAImplCommon.cpp  decoderXQAImplCommon.h  decoderXQAImplPrecompiled.cpp  decoderXQARunner.cpp
cpp/tensorrt_llm/kernels/decoderMaskedMultiheadAttention/decoderXQAImplJIT/: decoderXQAImplJIT.cpp  decoderXQAImplJIT.h
cpp/tensorrt_llm/kernels/fusedLayernormKernels/: CMakeLists.txt
cpp/tensorrt_llm/kernels/internal_cutlass_kernels/include/: moe_gemm_kernels.h
cpp/tensorrt_llm/kernels/speculativeDecoding/: eagleDecodingKernels.cu
cpp/tensorrt_llm/kernels/trtllmGenKernels/batchedGemm/: KernelRunner.cpp
cpp/tensorrt_llm/kernels/trtllmGenKernels/batchedGemm/trtllmGen_bmm_export/: BatchedGemmInterface.h  BatchedGemmOptions.h  GemmGatedActOptions.h  GemmOptions.h  KernelMetaInfo.h  KernelParams.h  KernelParamsDecl.h  KernelTraits.h  TmaDescriptor.h
cpp/tensorrt_llm/kernels/trtllmGenKernels/blockScaleMoe/: DevKernel.cu  RoutingDeepSeek.cu  RoutingKernel.cuh  RoutingKernel.h  RoutingKernelTopK.cuh  RoutingLlama4.cu  RoutingRenormalize.cu  runner.cu  runner.h
cpp/tensorrt_llm/kernels/trtllmGenKernels/fmha/: fmhaKernels.h  fmhaRunner.cpp  fmhaRunnerParams.h
cpp/tensorrt_llm/kernels/trtllmGenKernels/fmha/cubin/: kernelMetaInfo.h
cpp/tensorrt_llm/kernels/trtllmGenKernels/gemm/: KernelRunner.cpp  KernelRunner.h
cpp/tensorrt_llm/kernels/trtllmGenKernels/gemm/trtllmGen_gemm_export/: Enums.h  GemmInterface.h  GemmOptions.h  KernelMetaInfo.h  KernelParams.h  KernelTraits.h  TmaDescriptor.h
cpp/tensorrt_llm/kernels/trtllmGenKernels/gemmGatedAct/: KernelRunner.cpp  KernelRunner.h
cpp/tensorrt_llm/kernels/trtllmGenKernels/gemmGatedAct/trtllmGen_gatedAct_export/: Enums.h  GemmGatedActInterface.h  GemmGatedActOptions.h  GemmOptions.h  KernelMetaInfo.h  KernelParams.h  KernelTraits.h  TmaDescriptor.h
cpp/tensorrt_llm/kernels/userbuffers/: ub_allocator.h
docker/: Dockerfile.multi  Makefile
docker/common/: install_base.sh  install_cmake.sh  install_cuda_toolkit.sh  install_pytorch.sh  install_tensorrt.sh  install_triton.sh
docs/source/: conf.py  helper.py  index.rst  overview.md  quick-start-guide.md  release-notes.md
examples/: constraints.txt
examples/auto_deploy/: .gitignore  README.md  build_and_run_ad.py
examples/llm-api/: llm_mgmn_trtllm_bench.sh  (+5 more)
jenkins/: Build.groovy  BuildDockerImage.groovy  L0_MergeRequest.groovy  L0_Test.groovy  current_image_tags.properties
scripts/: batch_config_example.json  batch_convert_weights.py  build_wheel.py  convert_weights.py  smoke_test_higgs_audio_runtime.py  smoke_test_higgs_audio_weights.py
tensorrt_llm/: __init__.py  _common.py  _dlpack_utils.py  _ipc_utils.py  _mnnvl_utils.py  _utils.py  builder.py  disaggregated_params.py  functional.py  graph_rewriting.py  logger.py  lora_helper.py  lora_manager.py  mapping.py  module.py  profiler.py  prompt_adapter_manager.py  python_plugin.py  sampling_params.py  top_model_mixin.py  version.py
tests/: README_delay_pattern_tests.md  conftest.py  run_delay_pattern_tests.py  test_higgs_audio_delay_patterns.py
(+628 files in other folders)
